--- a/config.json
+++ b/config.json
@@ -27,9 +27,9 @@
         "localfile": "ftms.db",
         "Mysql": {
             "host": "31.11.39.178",
-            "user": "ftms",
-            "password": "ftms",
-            "database": "ftms"
+            "user": "Sql1818353",
+            "password": "Gagagaga0761!",
+            "database": "Sql1818353_4"
         }
     }
 }
